--- a/TP Python.ipynb
+++ b/TP Python.ipynb
@@ -11,6 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Consigne de travail** : avant chaque exécution d'instruction, vous devez deviner ce que python répondra. Pour ce faire, ajouter une cellule avant la console (outil \"+\" dans la barre d'outils, puis sélectionner \"Texte brut\" dans la liste déroulante de la barre d'outils).  \n",
+    "Dans le cas où il n'y a pas concordance après exécution, proposer une explication dans une nouvelle cellule après la console."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Partie A : des instructions uniques"
    ]
   },
@@ -25,14 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Démarrons avec quelque chose de vraiment simple. Par exemple, faisons un peu de math : placer le curseur après l'instruction 2 + 3 et appuyez simultanément sur les touches Shift et Entrée."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Consigne : avant chaque exécution d'instruction, vous devez deviner ce que python répondra. Pour ce faire, ajouter une cellule (outil \"+\" dans la barre d'outils).**"
+    "Démarrons avec quelque chose de vraiment simple. Par exemple, faisons un peu de math : placer le curseur après l'instruction 2 + 3 et appuyez simultanément sur les touches Ctrl et Entrée."
    ]
   },
   {
@@ -130,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vous venez de créer votre première chaîne de caractères ! C'est une suite de caractères qui peut être traitée par un ordinateur. Une chaîne de caractères doit toujours commencer et terminer par le même caractère. Cela peut être un guillemet simple (') ou un guillemet double (\"), ça n'a pas d'importance. Cela permet à Python de savoir que tout ce qui se trouve à l'intérieur de ces guillemets est une chaîne de caractères.\n",
+    "Vous venez de créer votre première chaîne de caractères ! C'est une suite de caractères qui peut être traitée par un ordinateur. Une chaîne de caractères doit toujours commencer et terminer par le même caractère. Cela peut être un guillemet simple (') ou un guillemet double (\"), ça n'a pas d'importance. Cela permet à Python de savoir que tout ce qui se trouve à l'intérieur de ces guillemets est une chaîne de caractères.  \n",
     "Il est possible de faire des opérations avec des chaînes de caractères comme ceci :"
    ]
   },
@@ -257,7 +258,7 @@
    "metadata": {},
    "source": [
     "Vous voyez ? C'est tout bête ! C'est simplement : `name vaut Roger`.  \n",
-    "Vous avez peut-être remarqué que contrairement à tout à l'heure, le programme ne renvoie rien. Du coup, comment faire pour vérifier que la variable existe vraiment ? Tapez simplement `name` et exécuter avec Shift+Entrée :"
+    "Vous avez peut-être remarqué que contrairement à tout à l'heure, le programme ne renvoie rien. Du coup, comment faire pour vérifier que la variable existe vraiment ? Tapez simplement `name` et exécuter avec Ctrl + Entrée :"
    ]
   },
   {
@@ -335,6 +336,25 @@
    "source": [
     "**Exercice 3.1** Après les instructions suivantes, et en utilisant que les variables `a`, `b` et `c` et les opérateurs `+`, `−`, `*` et `/`, taper une instruction retournant 8.  \n",
     "Puis une autre retournant 6, puis 18, puis 15, puis 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 3\n",
+    "b = 10\n",
+    "c = 5\n",
+    "# Écrire ici à la place de ce commentaire"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Appeler le professeur pour vérification*"
    ]
   },
   {
@@ -519,7 +539,7 @@
    "source": [
     "Pour l'instant, nous avons écrit tout notre code Python instruction après instruction, ce qui nous limite à une ligne à la fois. Les programmes normaux sont sauvegardés dans des fichiers et sont exécutés par l'interpréteur ou le compilateur de notre langage de programmation.  Jusque-là, c'était ligne par ligne dans la console ; on va maintenant traiter un ensemble d'instructions dans l'ordre choisi.\n",
     "\n",
-    "Auparavant, Vous avez probablement constaté que votre code se pare de multiples couleurs : ça fait partie des choses qui rendent la programmation dans un éditeur de texte bien plus agréable. C'est ce qu'on appelle « la coloration syntaxique ». C'est une fonctionnalité très utile lorsque l'on programme. La couleur des choses va vous permettre de détecter des problèmes : une chaîne de caractères non fermée, une faute dans un mot (ce sera par exemple le cas dans la fonction `def` que vous verrez un peu plus bas). C'est ce genre de fonctionnalités qui font que vous aimerez rapidement programmer avec un éditeur de code :)  \n",
+    "Auparavant, Vous avez probablement constaté que votre code se pare de multiples couleurs : ça fait partie des choses qui rendent la programmation dans un éditeur de texte bien plus agréable. C'est ce qu'on appelle « la coloration syntaxique ». C'est une fonctionnalité très utile lorsque l'on programme. La couleur des choses va vous permettre de détecter des problèmes : une chaîne de caractères non fermée, une faute dans un mot (ce sera par exemple le cas dans la fonction `def` que vous verrez un peu plus tard). C'est ce genre de fonctionnalités qui font que vous aimerez rapidement programmer avec un éditeur de code :)  \n",
     "Vous avez maintenant pas mal de connaissances en Python : n'hésitez pas à écrire du code avec ce que vous avez appris aujourd'hui !\n",
     "\n",
     "Passons à un autre outil essentiel de la programmation :"
@@ -541,18 +561,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-12-edb2a276ed63>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-edb2a276ed63>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    if 3 > 2:\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if 3 > 2:"
    ]
@@ -774,6 +785,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Appeler le professeur pour vérification*"
+   ]
   }
  ],
  "metadata": {
