--- a/TP Python - 2e partie.ipynb
+++ b/TP Python - 2e partie.ipynb
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercice 1.1** Tester de nouveaux appels de la fonction `salut` pour qu'elle retourne toutes les possibilités programmées."
+    "**Exercice 1.1** Tester de nouveaux appels de la fonction `salut` pour qu'elle affiche toutes les possibilités programmées."
    ]
   },
   {
@@ -182,10 +182,87 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "*Appeler le professeur pour vérification*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### La commande `return`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modifions l'unique instruction de la fonction `salut` :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def salut(nom):\n",
+    "    return 'Salut ' + nom + ' !'\n",
+    "\n",
+    "salut('Rachel')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "L'exécution de la fonction affiche le texte entre guillemets (simples). Normal ! Nous ne lui demandons plus d'afficher mais de retourner une réponse. Ainsi, l'instruction `salut('Rachel')` n'affiche plus `Salut Rachel !`, mais se contente de renvoyer la chaîne de caractères `'Salut Rachel !'`, que nous pouvons alors faire afficher avec la fonction `print` :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reponse = salut('Rachel')\n",
+    "print(reponse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "L'intérêt de retourner au lieu d'afficher réside dans la nouvelle possibilité d'utiliser le résultat d'une fonction dans un programme.  \n",
+    "Par exemple, pour trouver le plus petit de trois nombres donnés, on peut réexploiter la fonction `minimum` :"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minimum(a,b):\n",
+    "    if a<b:\n",
+    "        return a\n",
+    "    else:\n",
+    "        return b\n",
+    "\n",
+    "def minimum3(a,b,c):\n",
+    "    d = minimum(a,b)\n",
+    "    return minimum(d,c)\n",
+    "\n",
+    "print(minimum3(51,16,23))"
    ]
   },
   {
@@ -538,6 +615,42 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercice 3.4** Écrire un fonction `miniliste` qui prend en paramètres une liste de nombres, et retroune le plus petit d'entre eux. (*Utiliser la fonction `minimum` de la partie précédente.*)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercice 3.5** Écrire une fonction `plusjeune` prenant en paramètres deux listes de même taille : l'une contenant des prénoms de personnes, l'autre contenant leur âge (l'ordre est bien sûr respecté ; les âges sont tous différents). La fonction doit renvoyer le prénom du plus jeune.  \n",
+    "*Aide : pour connaître la position de la première occurrence d'un élément dans une liste, on utilise la méthode `index()`. Par exemple, si `liste = ['A', 'D', 'F', 'K', 'L']`, alors `liste.index('K')` renverra `3`.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plusjeune(prenoms, ages):\n",
+    "    # Taper les instructions ici\n",
+    "\n",
+    "    \n",
+    "# Pour tester :\n",
+    "print(plusjeune(['Abdul', 'Bernard', 'Caroline', 'Daphné', 'Élian'], [15, 17, 16, 14, 18]))"
+   ]
   },
   {
    "cell_type": "markdown",
