--- a/TP Python - 2e partie.ipynb
+++ b/TP Python - 2e partie.ipynb
@@ -65,7 +65,7 @@
     "def salut(nom):\n",
     "    if nom == 'Roger':\n",
     "        print('Salut Roger !')\n",
-    "    elif name == 'Julia':\n",
+    "    elif nom == 'Julia':\n",
     "        print('Salut Julia !')\n",
     "    else:\n",
     "        print('Salut anonyme !')\n",
